# python-flask-server/swagger_server/models/requests_error_respond.py
@@ -9,18 +9,18 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class ErrorRespond(Model):
+class RequestsErrorRespond(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, code: str=None, text: str=None):  # noqa: E501
-        """ErrorRespond - a model defined in Swagger
+        """RequestsErrorRespond - a model defined in Swagger
 
-        :param code: The code of this ErrorRespond.  # noqa: E501
+        :param code: The code of this RequestsErrorRespond.  # noqa: E501
         :type code: str
-        :param text: The text of this ErrorRespond.  # noqa: E501
+        :param text: The text of this RequestsErrorRespond.  # noqa: E501
         :type text: str
         """
         self.swagger_types = {
@@ -37,32 +37,32 @@ class ErrorRespond(Model):
         self._text = text
 
     @classmethod
-    def from_dict(cls, dikt) -> 'ErrorRespond':
+    def from_dict(cls, dikt) -> 'RequestsErrorRespond':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The errorRespond of this ErrorRespond.  # noqa: E501
-        :rtype: ErrorRespond
+        :return: The requestsErrorRespond of this RequestsErrorRespond.  # noqa: E501
+        :rtype: RequestsErrorRespond
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def code(self) -> str:
-        """Gets the code of this ErrorRespond.
+        """Gets the code of this RequestsErrorRespond.
 
 
-        :return: The code of this ErrorRespond.
+        :return: The code of this RequestsErrorRespond.
         :rtype: str
         """
         return self._code
 
     @code.setter
     def code(self, code: str):
-        """Sets the code of this ErrorRespond.
+        """Sets the code of this RequestsErrorRespond.
 
 
-        :param code: The code of this ErrorRespond.
+        :param code: The code of this RequestsErrorRespond.
         :type code: str
         """
 
@@ -70,20 +70,20 @@ class ErrorRespond(Model):
 
     @property
     def text(self) -> str:
-        """Gets the text of this ErrorRespond.
+        """Gets the text of this RequestsErrorRespond.
 
 
-        :return: The text of this ErrorRespond.
+        :return: The text of this RequestsErrorRespond.
         :rtype: str
         """
         return self._text
 
     @text.setter
     def text(self, text: str):
-        """Sets the text of this ErrorRespond.
+        """Sets the text of this RequestsErrorRespond.
 
 
-        :param text: The text of this ErrorRespond.
+        :param text: The text of this RequestsErrorRespond.
         :type text: str
         """
 
