# python-flask-server/swagger_server/models/server_status_respond.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class ServerStatusRespond(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, code: str=None, text: str=None):  # noqa: E501
+        """ServerStatusRespond - a model defined in Swagger
+
+        :param code: The code of this ServerStatusRespond.  # noqa: E501
+        :type code: str
+        :param text: The text of this ServerStatusRespond.  # noqa: E501
+        :type text: str
+        """
+        self.swagger_types = {
+            'code': str,
+            'text': str
+        }
+
+        self.attribute_map = {
+            'code': 'code',
+            'text': 'text'
+        }
+
+        self._code = code
+        self._text = text
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ServerStatusRespond':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The serverStatusRespond of this ServerStatusRespond.  # noqa: E501
+        :rtype: ServerStatusRespond
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def code(self) -> str:
+        """Gets the code of this ServerStatusRespond.
+
+
+        :return: The code of this ServerStatusRespond.
+        :rtype: str
+        """
+        return self._code
+
+    @code.setter
+    def code(self, code: str):
+        """Sets the code of this ServerStatusRespond.
+
+
+        :param code: The code of this ServerStatusRespond.
+        :type code: str
+        """
+
+        self._code = code
+
+    @property
+    def text(self) -> str:
+        """Gets the text of this ServerStatusRespond.
+
+
+        :return: The text of this ServerStatusRespond.
+        :rtype: str
+        """
+        return self._text
+
+    @text.setter
+    def text(self, text: str):
+        """Sets the text of this ServerStatusRespond.
+
+
+        :param text: The text of this ServerStatusRespond.
+        :type text: str
+        """
+
+        self._text = text
