# python-flask-server/swagger_server/models/word_distance_result.py
@@ -1,65 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.word_distance_result_key_word import WordDistanceResultKeyWord  # noqa: F401,E501
-from swagger_server import util
-
-
-class WordDistanceResult(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, key_word: WordDistanceResultKeyWord=None):  # noqa: E501
-        """WordDistanceResult - a model defined in Swagger
-
-        :param key_word: The key_word of this WordDistanceResult.  # noqa: E501
-        :type key_word: WordDistanceResultKeyWord
-        """
-        self.swagger_types = {
-            'key_word': WordDistanceResultKeyWord
-        }
-
-        self.attribute_map = {
-            'key_word': 'keyWord'
-        }
-
-        self._key_word = key_word
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'WordDistanceResult':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The wordDistanceResult of this WordDistanceResult.  # noqa: E501
-        :rtype: WordDistanceResult
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def key_word(self) -> WordDistanceResultKeyWord:
-        """Gets the key_word of this WordDistanceResult.
-
-
-        :return: The key_word of this WordDistanceResult.
-        :rtype: WordDistanceResultKeyWord
-        """
-        return self._key_word
-
-    @key_word.setter
-    def key_word(self, key_word: WordDistanceResultKeyWord):
-        """Sets the key_word of this WordDistanceResult.
-
-
-        :param key_word: The key_word of this WordDistanceResult.
-        :type key_word: WordDistanceResultKeyWord
-        """
-
-        self._key_word = key_word
