# python-flask-server/swagger_server/models/word_distance_result_key_word.py
@@ -1,65 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.word_distance_result_key_word_verification_word import WordDistanceResultKeyWordVerificationWord  # noqa: F401,E501
-from swagger_server import util
-
-
-class WordDistanceResultKeyWord(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, verification_word: WordDistanceResultKeyWordVerificationWord=None):  # noqa: E501
-        """WordDistanceResultKeyWord - a model defined in Swagger
-
-        :param verification_word: The verification_word of this WordDistanceResultKeyWord.  # noqa: E501
-        :type verification_word: WordDistanceResultKeyWordVerificationWord
-        """
-        self.swagger_types = {
-            'verification_word': WordDistanceResultKeyWordVerificationWord
-        }
-
-        self.attribute_map = {
-            'verification_word': 'verificationWord'
-        }
-
-        self._verification_word = verification_word
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'WordDistanceResultKeyWord':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The wordDistanceResult_keyWord of this WordDistanceResultKeyWord.  # noqa: E501
-        :rtype: WordDistanceResultKeyWord
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def verification_word(self) -> WordDistanceResultKeyWordVerificationWord:
-        """Gets the verification_word of this WordDistanceResultKeyWord.
-
-
-        :return: The verification_word of this WordDistanceResultKeyWord.
-        :rtype: WordDistanceResultKeyWordVerificationWord
-        """
-        return self._verification_word
-
-    @verification_word.setter
-    def verification_word(self, verification_word: WordDistanceResultKeyWordVerificationWord):
-        """Sets the verification_word of this WordDistanceResultKeyWord.
-
-
-        :param verification_word: The verification_word of this WordDistanceResultKeyWord.
-        :type verification_word: WordDistanceResultKeyWordVerificationWord
-        """
-
-        self._verification_word = verification_word
